--- a/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.3 - Measurement of Time and Distance.md
+++ b/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.3 - Measurement of Time and Distance.md
@@ -9,7 +9,7 @@ The necessary physical standard for measurement arises from the most fundamental
 -   A **minimum possible radius**.
 -   A **maximum possible orbital frequency** (and thus a minimum period).
 
-This stable state is a universal attractor for a binary system, and its properties are determined solely by the fundamental constants of the model (such as field speed `v` and charge `ε`). It is this predictable, reproducible configuration that provides the foundation for all measurement.
+This stable state is a universal attractor for a binary system, and its properties are determined solely by the fundamental constants of the model (such as field speed $v$ and charge $\epsilon$). It is this predictable, reproducible configuration that provides the foundation for all measurement.
 
 ### An Emergent Unit of Distance
 
