--- a/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.9 - Perspective.md
+++ b/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.9 - Perspective.md
@@ -2,7 +2,7 @@
 
 This framework appears to fit a surprising breadth of phenomena not because of any single novelty, but because a small set of simple, mutually reinforcing structural decisions is doing most of the heavy lifting. Two widely discussed choices—reduction to two true primitives (±ε Architrinos) and choosing ε=|e/6|—help with parsimony and charge bookkeeping, but the outsized wins come from how delayed, radial-only action, speed-based modulation, and a self-interaction threshold conspire to produce stability, scale selection, and emergent “magnetic-like” behavior without ever invoking right-hand-rule cross products.
 
-We work throughout in units with field speed v=1; per-hit accelerations are purely radial along r̂ and superpose linearly.
+We work throughout in units with field speed $v=1$; per-hit accelerations are purely radial along $\hat{\mathbf{r}}$ and superpose linearly.
 
 ---
 
@@ -57,7 +57,7 @@ We work throughout in units with field speed v=1; per-hit accelerations are pure
 
 - Why it matters:
   - Locality: 1/r² weighting ensures near sources dominate; far sources cancel via multipole suppression.
-  - Bookkeeping: with δ_ε you can integrate numerically with standard ODE solvers; with δ you can reason about impulses and events. Both views agree in the ε→0 limit for integrals over resolved intervals.
+  - Bookkeeping: with $\delta_\varepsilon$ you can integrate numerically with standard ODE solvers; with $\delta$ you can reason about impulses and events. Both views agree in the $\varepsilon\to 0$ limit for integrals over resolved intervals.
 
 ---
 
@@ -118,7 +118,7 @@ We work throughout in units with field speed v=1; per-hit accelerations are pure
 - Use $\Phi_\varepsilon$ to evaluate $U$ and verify $\Delta E_k = -\,\Delta U$ across events that cross the symmetry point; in the $\varepsilon\to 0$ limit, impulses integrate to the same work.
 
 4) Numerical recipe (robust, minimal assumptions)
-- For each receiver time t: (i) root-find retarded times t0 for all sources (and self), (ii) discard non-physical roots (H(0)=0, handle r=0 by symmetry), (iii) sum a_{o′←o}(t;t0) with the canonical modulation, (iv) integrate velocity and position with an event-aware scheme. Use ε-thickening for smooth integration when needed.
+- For each receiver time $t$: (i) root-find retarded times $t_0$ for all sources (and self), (ii) discard non-physical roots ($H(0)=0$, handle $r=0$ by symmetry), (iii) sum $a_{o′\leftarrow o}(t;t_0)$ with the canonical modulation, (iv) integrate velocity and position with an event-aware scheme. Use $\varepsilon$-thickening for smooth integration when needed.
 
 ---
 
