--- a/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.5 - Photons and Neutrinos.md
+++ b/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.5 - Photons and Neutrinos.md
@@ -1,6 +1,6 @@
 # Photons and Neutrinos: Neutral, Geometric Channels
 
-We work in units with field speed v = 1 unless stated otherwise.
+We work in units with field speed $v=1$ unless stated otherwise.
 
 ---
 
@@ -12,15 +12,15 @@ Definition (geometric): A photon is a coherent, charge-neutral, propagating bund
   - Net charge is zero at all times; far fields are dominated by transverse oscillations set by retardation geometry. In coherent regimes, photons exhibit classical-beam behavior (“evidence for classical photons”) while retaining packet-like coupling to discrete normal modes.
 
 - Axial corridor geometry:
-  - A quasi-cylindrical corridor aligned with propagation axis ê carries the superposed 1/r² shells in a phase structure that self-guides the bundle. The corridor supports a train of phase-aligned planar slices that advance at group speed ~ v.
+  - A quasi-cylindrical corridor aligned with propagation axis $\hat{\mathbf{e}}$ carries the superposed $1/r^2$ shells in a phase structure that self-guides the bundle. The corridor supports a train of phase-aligned planar slices that advance at group speed ~ $v$.
 
 - Polarization, helicity, and Malus:
-  - Linear polarization = fixed orientation of the principal transverse oscillation ellipse relative to ê.
-  - Circular/elliptic polarization = constant-phase rotation of that ellipse around ê; helicity is the sign of this axial phase winding.
-  - Malus’s law emerges geometrically: an analyzer projects the corridor’s transverse pattern onto its axis, giving transmitted intensity ∝ cos²θ from corridor–analyzer overlap, without invoking right-hand-rule magnetism.
+  - Linear polarization = fixed orientation of the principal transverse oscillation ellipse relative to $\hat{\mathbf{e}}$.
+  - Circular/elliptic polarization = constant-phase rotation of that ellipse around $\hat{\mathbf{e}}$; helicity is the sign of this axial phase winding.
+  - Malus’s law emerges geometrically: an analyzer projects the corridor’s transverse pattern onto its axis, giving transmitted intensity $\propto \cos^2\theta$ from corridor–analyzer overlap, without invoking right-hand-rule magnetism.
 
 - Kinematics and path:
-  - Group velocity ≈ v (1 in our units); no rest frame (apparent rest energy is zero).
+  - Group velocity ≈ $v$ (1 in our units); no rest frame (apparent rest energy is zero).
   - Energy–frequency correspondence: for a periodic source of angular frequency ω, the apparent energy flux scales $E_{\text{app}} \propto \omega$ over resolved intervals.
   - “Absolute distance and path” correspond to the geometric length of the axial corridor threaded by the train across simultaneity slices $\Sigma_t$.
 
