--- a/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.7 - W and Z Bosons.md
+++ b/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.7 - W and Z Bosons.md
@@ -1,6 +1,6 @@
 # W and Z Bosons as Transient Electroweak Meta-Assemblies
 
-We work in units with field speed v = 1 unless stated otherwise. ε = |e|/6 is the unit charge magnitude.
+We work in units with field speed $v=1$ unless stated otherwise. $\epsilon = |e|/6$ is the unit charge magnitude.
 
 ## 1) Concept: Localized Recoupling Bundles
 
@@ -9,7 +9,7 @@ In this framework, W± and Z⁰ are not fundamental particles; they are short-li
 - Corridor geometry:
   - A W/Z bundle is a compact, phase-locked vortex corridor connecting two polar regions (within or between assemblies). It carries concentrated delayed, radial-only actions arranged to transport charge and/or angular momentum during a brief interval.
 - Lifetime and scale:
-  - Spatial extent ℓ is a few d₀ (the minimal binary radius); lifetime τ is short (impulsive on assembly timescales). The bundle typically propagates near v along its axis when emitted into open space, or remains tethered between sources during transfer.
+  - Spatial extent $\ell$ is a few $d_0$ (the minimal binary radius); lifetime $\tau$ is short (impulsive on assembly timescales). The bundle typically propagates near $v$ along its axis when emitted into open space, or remains tethered between sources during transfer.
 
 Plain language: W and Z are fleeting “thickened tubes” of push that briefly connect two poles to swap charge or spin before they fade.
 
