mathing to the nth degree

--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.5 - Kinetic and Potential Energy.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.5 - Kinetic and Potential Energy.md
@@ -32,9 +32,9 @@ The model adheres to the principle of energy conservation through a continuous e
     \Delta E_k = W = \int \mathbf{F} \cdot d\mathbf{s} = -\Delta U
     $$
 
-2.  **Velocity-Modulated Emission:** Architrinos emit wavefronts at a constant cadence; what is modulated by speed is the per-wavefront amplitude. The effective charge of an emission, $q_{eff}$, decreases as the particle's speed increases:
+2.  **Velocity-Modulated Emission:** Architrinos emit wavefronts at a constant cadence; what is modulated by speed is the per-wavefront amplitude. The effective charge of an emission, $q_{\mathrm{eff}}$, decreases as the particle's speed increases:
     $$
-    q_{eff}(t_0) = \frac{q}{1 + |\mathbf{v}_a(t_0)|}
+    q_{\mathrm{eff}}(t_0) = \frac{q}{1 + |\mathbf{v}_a(t_0)|}
     $$
     This creates a fundamental feedback loop. As a particle gains kinetic energy (accelerates), the per-wavefront amplitude and the receiver’s response are reduced by the speed modulation. This self-regulating mechanism helps maintain overall energy balance and prevents runaway behavior.
 
