--- a/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.7 - W and Z Bosons.md
+++ b/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.7 - W and Z Bosons.md
@@ -18,7 +18,7 @@ Plain language: W and Z are fleeting “thickened tubes” of push that briefly 
 ## 2) Channels and Quantum Numbers
 
 - W± (charged transfer):
-  - Function: transports net charge ±6ε between assemblies by reconfiguring which cores/personality architrinos carry those ε-units.
+  - Function: transports net charge $\pm 6\epsilon$ between assemblies by reconfiguring which cores/personality architrinos carry those $\epsilon$-units.
   - Charge: $q_W = \pm 6\epsilon$ (matches $\pm e$ when measured in electron units).
   - Spin: effectively spin-1 from the axial corridor structure and its transverse phase.
   - Interpretation: a localized transfer operation that updates the charge bookkeeping of the coupled assemblies while conserving the global ε-inventory.
