--- a/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.9 - Perspective.md
+++ b/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.9 - Perspective.md
@@ -6,11 +6,11 @@ We work throughout in units with field speed $v=1$; per-hit accelerations are pu
 
 ---
 
-## 1) Delayed spherical emission on 1/r² shells (no magnetism needed)
+## 1) Delayed spherical emission on $1/r^2$ shells (no magnetism needed)
 
 - What we assume:
-  - Sources emit potential on expanding spherical shells with surface density ∝1/r², represented distributionally by δ(r−τ) with τ=t−t0.
-  - Each causal hit is strictly radial: the acceleration contribution lies along r̂ from the retarded source point to the receiver.
+  - Sources emit potential on expanding spherical shells with surface density $\propto 1/r^2$, represented distributionally by $\delta(r-\tau)$ with $\tau = t - t_0$.
+  - Each causal hit is strictly radial: the acceleration contribution lies along $\hat{\mathbf{r}}$ from the retarded source point to the receiver.
 
 - Why it matters:
   - Gauss-like behavior falls out immediately (1/r² on wavefronts).
@@ -56,7 +56,7 @@ We work throughout in units with field speed $v=1$; per-hit accelerations are pu
   - We use a narrow Gaussian shell $\delta_\varepsilon$ when continuous-time derivatives are needed.
 
 - Why it matters:
-  - Locality: 1/r² weighting ensures near sources dominate; far sources cancel via multipole suppression.
+  - Locality: $1/r^2$ weighting ensures near sources dominate; far sources cancel via multipole suppression.
   - Bookkeeping: with $\delta_\varepsilon$ you can integrate numerically with standard ODE solvers; with $\delta$ you can reason about impulses and events. Both views agree in the $\varepsilon\to 0$ limit for integrals over resolved intervals.
 
 ---
@@ -88,7 +88,7 @@ We work throughout in units with field speed $v=1$; per-hit accelerations are pu
 - Stability without fine-tuned potentials:
   - The |v|=1 switch plus velocity dimming sets operating points and prevents singular collapse.
 - Scale emergence:
-  - d0 and t0 arise from dynamics; they are not postulated rulers and clocks but attractors of the binary system.
+  - $d_0$ and $t_0$ arise from dynamics; they are not postulated rulers and clocks but attractors of the binary system.
 - Shielding and apparent inertia:
   - Fast internal motion produces far-field cancellation; the tiny residual field of a coherent assembly behaves like inertial mass in interactions with the outside.
 - Magnetism without magnetism:
@@ -110,8 +110,8 @@ We work throughout in units with field speed $v=1$; per-hit accelerations are pu
 - Compute the time-averaged multipole expansion of a high-frequency binary; show leading terms cancel along the rotation axis and decay rapidly off-axis.
 - Observable: a “quiet line” (near-zero net potential) threading the binary.
 
-2) Scale selection for d0 and t0
-- With $\delta\to\delta_\varepsilon$, compute the mean inward attraction from the partner versus the mean outward self-repulsion across one orbit; the fixed point defines d0 and the maximum orbital frequency $2\pi/t_0$.
+2) Scale selection for $d_0$ and $t_0$
+- With $\delta\to\delta_\varepsilon$, compute the mean inward attraction from the partner versus the mean outward self-repulsion across one orbit; the fixed point defines $d_0$ and the maximum orbital frequency $2\pi/t_0$.
 - Prediction: the same d0 appears across binaries with the same ε and v, independent of initial conditions after sufficient relaxation.
 
 3) Energy consistency across the |v|=1 transition
