--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.1 - Path.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.1 - Path.md
@@ -28,11 +28,11 @@ with durations measured separately as $\Delta t = t_2 - t_1$. We do not define a
 ### **Sphere Stream**
 As an Architrino moves along its path $\mathcal{P}_a$, it continuously emits expanding potential spheres. The collection of all spheres emitted from its past path, as they exist at a single moment in time, is called the **sphere stream**.
 
-Mathematically, at an observation time $t_{obs}$, the sphere stream is the family of all spheres $S_{t_0}$ emitted at each past moment $t_0 \le t_{obs}$. Each sphere $S_{t_0}$ is centered at the historical position $\mathbf{s}_a(t_0)$ and has a radius $r(t_0) = (t_{obs} - t_0)$.
+Mathematically, at an observation time $t_{obs}$, the sphere stream is the family of all spheres $S_{t_0}$ emitted at each past moment $t_0 \le t_{obs}$. Each sphere $S_{t_0}$ is centered at the historical position $\mathbf{s}_a(t_0)$ and has a radius $r(t_0) = v\,(t_{obs} - t_0)$.
 
 The sphere stream, denoted $\mathcal{SS}_a(t_{obs})$, is the union of all these spheres:
 $$
-\mathcal{SS}_a(t_{obs}) = \bigcup_{t_0 \le t_{obs}} \{ \mathbf{s} \in \mathbb{R}^3 \mid \|\mathbf{s} - \mathbf{s}_a(t_0)\| = (t_{obs} - t_0) \}
+\mathcal{SS}_a(t_{obs}) = \bigcup_{t_0 \le t_{obs}} \{ \mathbf{s} \in \mathbb{R}^3 \mid \|\mathbf{s} - \mathbf{s}_a(t_0)\| = v\,(t_{obs} - t_0) \}
 $$
 This set represents the complete locus of points in space where the Architrino's field is currently active at time $t_{obs}$. Under mild conditions on the historical worldline (e.g., unbounded excursion over time), the union of expanding wavefronts can densely cover space within bounded regions; in general, the coverage depends on the geometry of $\mathbf{s}_a(t)$.
 
