--- a/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.5 - Photons and Neutrinos.md
+++ b/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.5 - Photons and Neutrinos.md
@@ -21,7 +21,7 @@ Definition (geometric): A photon is a coherent, charge-neutral, propagating bund
 
 - Kinematics and path:
   - Group velocity ≈ $v$ (1 in our units); no rest frame (apparent rest energy is zero).
-  - Energy–frequency correspondence: for a periodic source of angular frequency ω, the apparent energy flux scales $E_{\text{app}} \propto \omega$ over resolved intervals.
+  - Energy–frequency correspondence: for a periodic source of angular frequency $\omega$, the apparent energy flux scales $E_{\text{app}} \propto \omega$ over resolved intervals.
   - “Absolute distance and path” correspond to the geometric length of the axial corridor threaded by the train across simultaneity slices $\Sigma_t$.
 
 - Environmental coupling (spacetime æther and media):
