--- a/Geometrical Model of Nature/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.1 - Schemas & Conventions/20.1.1.0 - Mathematical Style Guide.md
+++ b/Geometrical Model of Nature/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.1 - Schemas & Conventions/20.1.1.0 - Mathematical Style Guide.md
@@ -102,7 +102,7 @@ Canonical per-hit acceleration:
 $$
 a_{o′\leftarrow j}(t; t_0)
 = \kappa\,\sigma_{q_j q_{o′}}\,
-\frac{|q_j q_{o′}|}{r^2\,(1 + |v_j(t_0)|)\,(1 + |v_{o′}(t)|)}\,\hat{\mathbf{r}}.
+\frac{|q_j q_{o′}|}{r^2\,(1 + \|\mathbf{v}_j(t_0)\|)\,(1 + \|\mathbf{v}_{o′}(t)\|)}\,\hat{\mathbf{r}}.
 $$
 
 Total acceleration:
