--- a/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.5 - Photons and Neutrinos.md
+++ b/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.5 - Photons and Neutrinos.md
@@ -9,7 +9,7 @@ We work in units with field speed $v=1$ unless stated otherwise.
 Definition (geometric): A photon is a coherent, charge-neutral, propagating bundle of delayed, purely radial per-hit actions organized along a narrow axial corridor. In practice it appears as a phase-locked stack of planar sub-bundles (“planar bosons on the photon train”) emitted by oscillatory sources (e.g., binaries inside assemblies). Emission/absorption are re-coupling events of this corridor to and from internal binaries; no separate gauge-field inventory is required.
 
 - Neutrality and classical character:
-  - Net charge is zero at all times; far fields are dominated by transverse oscillations set by retardation geometry. In coherent regimes, photons exhibit classical-beam behavior (“evidence for classical photons”) while retaining packet-like coupling to discrete normal modes.
+  - Net charge is zero at all times; far fields are dominated by transverse oscillations set by path-history geometry. In coherent regimes, photons exhibit classical-beam behavior (“evidence for classical photons”) while retaining packet-like coupling to discrete normal modes.
 
 - Axial corridor geometry:
   - A quasi-cylindrical corridor aligned with propagation axis $\hat{\mathbf{e}}$ carries the superposed $1/r^2$ shells in a phase structure that self-guides the bundle. The corridor supports a train of phase-aligned planar slices that advance at group speed ~ $v$.
@@ -47,7 +47,7 @@ Definition (geometric): A neutrino is a Noether Core in a net-neutral configurat
   - Trajectories are almost straight at speeds close to v; small deflections occur only through coherent axial corridor couplings to nearby assemblies. Apparent inertia is dictated by the minuscule residual field (“apparent mass” from shielding).
 
 - Flavor and oscillation (internal phase swapping):
-  - “Flavor” labels which internal binary predominantly hosts the residual phase imbalance. Slow exchange of this imbalance among the three binaries yields flavor oscillations over distance without invoking a fundamental rest mass; the beat pattern arises from internal phase dynamics and retardation geometry.
+  - “Flavor” labels which internal binary predominantly hosts the residual phase imbalance. Slow exchange of this imbalance among the three binaries yields flavor oscillations over distance without invoking a fundamental rest mass; the beat pattern arises from internal phase dynamics and path-history geometry.
 
 - Chirality (handedness bias):
   - Emission/capture selection rules are chiral: axial phase winding favored in typical sources matches observed handedness of weak processes (alignment with W/Z-like corridor re-couplings).
