--- a/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.9 - Perspective.md
+++ b/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.9 - Perspective.md
@@ -10,11 +10,11 @@ We work throughout in units with field speed $v=1$; per-hit accelerations are pu
 
 - What we assume:
   - Sources emit potential on expanding spherical shells with surface density $\propto 1/r^2$, represented distributionally by $\delta(r-\tau)$ with $\tau = t - t_0$.
-  - Each causal hit is strictly radial: the acceleration contribution lies along $\hat{\mathbf{r}}$ from the retarded source point to the receiver.
+  - Each causal hit is strictly radial: the acceleration contribution lies along $\hat{\mathbf{r}}$ from the source history point to the receiver.
 
 - Why it matters:
   - Gauss-like behavior falls out immediately (1/r² on wavefronts).
-  - Moving systems automatically generate tangential components in the receiver’s frame due solely to retardation geometry: the “aim point” is in the past, so the strictly radial force-at-emission is not central at reception. Orbital and vortex-like patterns emerge from delay, not from any B∝v×E construction.
+  - Moving systems automatically generate tangential components in the receiver’s frame due solely to path-history geometry: the “aim point” is in the past, so the strictly radial force-at-emission is not central at reception. Orbital and vortex-like patterns emerge from delay, not from any B∝v×E construction.
 
 - Consequence:
   - You can reproduce many “magnetic” phenomenologies (circulation, axial vortices, flux tubes) as kinematic consequences of delayed radial pushes. There is no right-hand rule, no cross products—just geometry and time delay.
@@ -40,7 +40,7 @@ We work throughout in units with field speed $v=1$; per-hit accelerations are pu
 ## 3) Self-interaction switch at |v|=v: the engine of stabilization and scales
 
 - What we assume:
-  - When a worldline outruns its own recently emitted shells (|v|>1 in our units), the retarded roots include self-hits.
+  - When a worldline outruns its own recently emitted shells (|v|>1 in our units), the causal roots include self-hits.
   - Self-hits are always repulsive (like-on-like).
 
 - Why it matters:
@@ -92,7 +92,7 @@ We work throughout in units with field speed $v=1$; per-hit accelerations are pu
 - Shielding and apparent inertia:
   - Fast internal motion produces far-field cancellation; the tiny residual field of a coherent assembly behaves like inertial mass in interactions with the outside.
 - Magnetism without magnetism:
-  - Tangential effects and axial structures appear as a corollary of retardation + radial per-hit action. No cross products required.
+  - Tangential effects and axial structures appear as a corollary of path-history + radial per-hit action. No cross products required.
 
 ---
 
@@ -118,7 +118,7 @@ We work throughout in units with field speed $v=1$; per-hit accelerations are pu
 - Use $\Phi_\varepsilon$ to evaluate $U$ and verify $\Delta E_k = -\,\Delta U$ across events that cross the symmetry point; in the $\varepsilon\to 0$ limit, impulses integrate to the same work.
 
 4) Numerical recipe (robust, minimal assumptions)
-- For each receiver time $t$: (i) root-find retarded times $t_0$ for all sources (and self), (ii) discard non-physical roots ($H(0)=0$, handle $r=0$ by symmetry), (iii) sum $a_{o′\leftarrow o}(t;t_0)$ with the canonical modulation, (iv) integrate velocity and position with an event-aware scheme. Use $\varepsilon$-thickening for smooth integration when needed.
+- For each receiver time $t$: (i) root-find causal emission times $t_0$ for all sources (and self), (ii) discard non-physical roots ($H(0)=0$, handle $r=0$ by symmetry), (iii) sum $a_{o′\leftarrow o}(t;t_0)$ with the canonical modulation, (iv) integrate velocity and position with an event-aware scheme. Use $\varepsilon$-thickening for smooth integration when needed.
 
 ---
 
