--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.4 - Action.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.4 - Action.md
@@ -69,10 +69,10 @@ $$
 Thus the per-hit work rate is $\mathbf{a}\cdot\mathbf{v} = (\mathbf{a}\cdot\hat{\mathbf{r}})\,v_r$; there is no instantaneous work on the orthogonal component.
 
 Radial motion and the $\large 1/r^2$ factor (local trend):
-- Inward motion ($\large v_r<0$, receiver moving toward the retarded source point) decreases $r$ between close successive hits, tending to increase subsequent per-hit strengths via $\large 1/r^2$ (all else equal).
+- Inward motion ($\large v_r<0$, receiver moving toward the source history point) decreases $r$ between close successive hits, tending to increase subsequent per-hit strengths via $\large 1/r^2$ (all else equal).
 - Outward motion ($\large v_r>0$) increases $r$, tending to decrease subsequent per-hit strengths.
 
-Retardation shifts both the retarded root $t'$ and $\hat{\mathbf{r}}$ over finite intervals, so these are local statements.
+Path-history delay shifts both the causal root $t'$ and $\hat{\mathbf{r}}$ over finite intervals, so these are local statements.
 
 Modeling note: The canonical modulation uses the total speed $|\mathbf{v}_{o'}(t)|$ in the factor $1/\big(1+|\mathbf{v}_{o'}(t)|\big)$. Some applications may consider an alternative receiver modulation depending only on $|v_r|$ to isolate motion along the line of action; we retain the canonical total-speed modulation here for consistency.
 
