--- a/Geometrical Model of Nature/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.1 - Schemas & Conventions/20.1.1.0 - Mathematical Style Guide.md
+++ b/Geometrical Model of Nature/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.1 - Schemas & Conventions/20.1.1.0 - Mathematical Style Guide.md
@@ -47,10 +47,10 @@ Plain language: Objects move as dots in 3D through successive instants; speeds a
 
 ---
 
-## 3) Propagation and causal set (retarded-only)
+## 3) Propagation and causal set (delayed-only)
 
 - Field speed is $v$; by default we non-dimensionalize to $v=1$.
-- Retarded-time condition (RT):
+- Causal-time condition (CT):
   $$
   \tau = t - t_0,\quad r = \|\mathbf{s}_{o'}(t) - \mathbf{s}_j(t_0)\|,\quad r = v\,\tau
   $$
@@ -177,5 +177,5 @@ Plain language: Fix units so the field speed is one; use ε as the basic charge;
 
 - After formal definitions, add a brief “Plain language” sentence.
 - Use consistent symbol set: $\mathcal{C}_j(t)$, $r$, $\hat{\mathbf{r}}$, $v$, $\epsilon$, $\kappa$.
-- Equation tags (optional): (RT) retarded-time, (EOM) equation of motion, (REG) regularization, (ENER) energetics.
+- Equation tags (optional): (CT) causal-time, (EOM) equation of motion, (REG) regularization, (ENER) energetics.
 - Phrase velocity effects as “per-wavefront amplitude and receiver response modulation; emission cadence is constant.”
