--- a/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.7 - W and Z Bosons.md
+++ b/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.7 - W and Z Bosons.md
@@ -40,7 +40,7 @@ Conservation: All transfers are implemented as reassignment of personality archi
 - Absorption:
   - Occurs when a corridor aligns with a compatible polar region; the phase-locked pattern is re-captured, yielding a discrete update of bound personality architrinos and internal mode energies.
 - Selection rules:
-  - Axial and chiral compatibility determine W vs Z channel availability and polarization. Right-hand-rule constructs do not appear; allowed/forbidden couplings follow from retardation geometry and the phase structure of the nested binaries.
+  - Axial and chiral compatibility determine W vs Z channel availability and polarization. Right-hand-rule constructs do not appear; allowed/forbidden couplings follow from path-history geometry and the phase structure of the nested binaries.
 
 Plain language: A sharp internal shove at a pole can launch a tube; if another pole of the right shape and timing is waiting, the tube docks and hands off charge or spin; if not, it decays in flight.
 
