--- a/Geometrical Model of Nature/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.1 - Schemas & Conventions/20.1.1.0 - Mathematical Style Guide.md
+++ b/Geometrical Model of Nature/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.1 - Schemas & Conventions/20.1.1.0 - Mathematical Style Guide.md
@@ -91,7 +91,7 @@ Plain language: Each emission is a razor-thin spherical shell; when needed, we t
 
 ## 5) Master Equation of Motion (EOM; purely radial)
 
-Given a receiver o′ at time t and a source j at retarded time t₀ ∈ 𝒞_j(t), let
+Given a receiver o′ at time t and a source j at causal emission time t₀ ∈ 𝒞_j(t), let
 $$
 r = \|\mathbf{s}_{o'}(t) - \mathbf{s}_j(t_0)\|,\quad
 \hat{\mathbf{r}} = \frac{\mathbf{s}_{o'}(t) - \mathbf{s}_j(t_0)}{r},\quad
