--- a/Geometrical Model of Nature/00 - Foundation Elements/00.0 - Absolute Time and Space/00.0.3 - Absolute Timespace.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.0 - Absolute Time and Space/00.0.3 - Absolute Timespace.md
@@ -60,7 +60,7 @@ There is no 4D path length mixing $t$ and $x^i$; spatial lengths and durations a
 $L[x; t_1, t_2] = \int_{t_1}^{t_2} \|v(t)\|\, dt$.
 
 ### 3a. Causality and propagation
-We adopt an absolute causal order: event A precedes event B iff $t_A < t_B$. Influences propagate via spherical wavefronts at a finite speed $v$; define $c_{\max} \equiv v$ as the maximal signal speed in the model. An event $(t_0, x_0)$ can influence points $(t, x)$ only if $t > t_0$ and $\|x - x_0\| = v\,(t - t_0)$. There are no advanced or instantaneous interactions (retarded-only). The background geometry provides no additional causal cones; causality is entirely determined by this propagation rule.
+We adopt an absolute causal order: event A precedes event B iff $t_A < t_B$. Influences propagate via spherical wavefronts at a finite speed $v$; define $c_{\max} \equiv v$ as the maximal signal speed in the model. An event $(t_0, x_0)$ can influence points $(t, x)$ only if $t > t_0$ and $\|x - x_0\| = v\,(t - t_0)$. There are no advanced or instantaneous interactions (delayed-only). The background geometry provides no additional causal cones; causality is entirely determined by this propagation rule.
 
 ---
 
