--- a/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.9 - Perspective.md
+++ b/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.9 - Perspective.md
@@ -99,7 +99,7 @@ We work throughout in units with field speed $v=1$; per-hit accelerations are pu
 ## What the model explicitly does not use
 
 - No Lorentzian spacetime metric at the fundamental level (background is absolute time + Euclidean space; emergent cones are effective, not kinematic).
-- No right-hand-rule magnetism or v×B forces; every per-hit action is along r̂.
+- No right-hand-rule magnetism or $\mathbf{v}\times\mathbf{B}$ forces; every per-hit action is along $\hat{\mathbf{r}}$.
 - No gauge field inventory beyond the Architrino fields; interaction carriers are the geometry of delayed shells and their couplings.
 
 ---
@@ -136,7 +136,7 @@ We work throughout in units with field speed $v=1$; per-hit accelerations are pu
 ## Open questions (productive)
 
 - Exact analytic forms for d0 and t0 in the symmetric binary with the canonical modulation.
-- Rigorous conditions for uniqueness/multiplicity of retarded roots in accelerated motion and their contribution to stability.
+- Rigorous conditions for uniqueness/multiplicity of causal roots in accelerated motion and their contribution to stability.
 - Statistical mechanics of many-body sphere streams: when and how do coherent, Lorentz-like effective cones emerge, and with what characteristic speed relative to v?
 
 Plain language summary: Keep the hits radial, delay them in time, dim everything as it moves faster, and let fast movers run into their own wakes. From those four ideas, you get stable orbits, natural rulers and clocks, shielding that looks like inertia, and “magnetic-like” structures—all without any right-hand-rule magnetism.
