--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.4 - Action (walkthrough step 1).md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.4 - Action (walkthrough step 1).md
@@ -13,7 +13,7 @@ Detailed explanation (dynamical geometry):
 
 - Field geometry as expanding spherical shells:
   - Each Architrino emits potential on razor-thin spherical shells that expand at field speed $v$ (non-dimensionalized to $v=1$ elsewhere). The field is distribution-valued, supported on $r=v(t-t_0)$ around the historical emission point $\mathbf{s}(t_0)$, with surface density $\propto 1/r^2$.
-  - “Potential field” here is not a static scalar on space; it is a time-indexed family of spherical wavefronts whose superposition defines the instantaneous environment at a receiver’s location.
+  - “Potential field” here is not a static scalar on space; it is the collection of expanding spherical wavefronts from all sources at earlier times, summed at the receiver’s location and now.
 
 - Intersection as the event that causes acceleration:
   - The receiver Architrino follows a continuous path (worldline) $\mathbf{s}_{o'}(t)$. An “intersection” occurs at time $t$ when $\mathbf{s}_{o'}(t)$ lies on one of the source’s expanding shells. Equivalently, there exists an emission time $t'\le t$ such that the geometric condition
