--- a/Geometrical Model of Nature/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.1 - Schemas & Conventions/20.1.1.0 - Mathematical Style Guide.md
+++ b/Geometrical Model of Nature/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.1 - Schemas & Conventions/20.1.1.0 - Mathematical Style Guide.md
@@ -39,6 +39,10 @@ Plain language: One global clock t and ordinary 3D space; we write vectors in bo
   $$
   h_{ij} = \delta_{ij}\quad\text{on each slice }\Sigma_t.
   $$
+
+  Here $\delta_{ij}$ is the Kronecker delta (identity). It defines the Euclidean dot product and norm:
+  $u\!\cdot\!v = h_{ij}u^i v^j$ and $\|v\|^2 = h_{ij}v^i v^j$. Raising/lowering is trivial with $h^{ij}=\delta^{ij}$.
+  In Cartesian frames, $\Gamma^{i}{}_{jk}=0$, so covariant derivatives equal partial derivatives and geodesics are straight; curvature vanishes identically. In curvilinear coordinates (e.g., spherical), $h_{ij}$ takes the flat-space form $\mathrm{diag}(1, r^2, r^2\sin^2\theta)$, still representing the same flat geometry.
 - There is no 4D non-degenerate metric; we do not mix time and space into a single line element.
 - Worldlines:
   - $\mathbf{x}: I \subset \mathbb{R} \to \mathbb{R}^3,\ t \mapsto \mathbf{x}(t)$, absolutely continuous; $\mathbf{v} = d\mathbf{x}/dt$, $\mathbf{a} = d\mathbf{v}/dt$.
