--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.4 - Action.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.4 - Action.md
@@ -2,7 +2,7 @@
 
 The dynamics of an Architrino are governed by a simple action: an acceleration caused by the intersection of its path with a potential field.
 
-Geodesics and dynamics: In a flat, non-dynamical background, geodesics are straight and do not encode forces; accelerations arise solely from fields and assemblies on this fixed background.
+Geodesics and dynamics: The background is fixed (absolute time × Euclidean space); free paths are straight, and any departure comes only from delayed, purely radial intersections with emitted spheres (superposed fields from assemblies)—never from background curvature.
 
 ### **Units and constants**
 -   We choose units with field speed $v=1$ (select $L_0,T_0$ so $v=L_0/T_0=1$); all speeds are hence dimensionless.
