--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.4 - Action (walkthrough step 1).md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.4 - Action (walkthrough step 1).md
@@ -3,7 +3,7 @@
 Existing text excerpt (from 00.1.4 - Action.md):
 > The dynamics of an Architrino are governed by a simple action: an acceleration caused by the intersection of its path with a potential field.
 >
-> Geodesics and dynamics: In a flat, non-dynamical background, geodesics are straight and do not encode forces; accelerations arise solely from fields and assemblies on this fixed background.
+> Geodesics and dynamics: The background is fixed (absolute time × Euclidean space); free paths are straight, and any departure comes only from delayed, purely radial intersections with emitted spheres (superposed fields from assemblies)—never from background curvature.
 
 Detailed explanation (dynamical geometry):
 
