--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.4 - Action.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.4 - Action.md
@@ -91,7 +91,7 @@ while preserving total emission $q_{\text{eff}}$. This produces continuous-in-ti
     $$
     \Phi_{\text{net}} = \sum_{i} \Phi_i
     $$
-    The total acceleration on a particle at any instant is the vector sum of the accelerations from all intersecting potential spheres.
+    The total acceleration on a particle at any instant is the vector sum of the accelerations from all intersecting potential spheres. Operationally, every Architrino is continuously immersed in the superposed sphere streams of all others (and, when kinematics permit, its own); tractability comes from treating each causal hit independently with $1/r^2$ distance weighting (and speed modulations), which makes local sources dominate.
 
 -   **Velocity Dependence:** The dynamics are velocity-dependent. Architrinos are transceivers: they emit potential spheres at a constant cadence; only the per-wavefront amplitude is modulated by the emitter’s speed, and the receiver’s response is likewise modulated by its speed. Self-interaction arises when the causal set $\,\mathcal{C}_a(t)\,$ for $o'=o$ is nonempty; this can occur when $|\mathbf{v}_a| \ge v$ at some past time or due to curvature of the path allowing previously emitted shells to re-intersect the worldline.
 
