--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.4 - Action (walkthrough step 1).md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.4 - Action (walkthrough step 1).md
@@ -3,7 +3,7 @@
 Existing text excerpt (from 00.1.4 - Action.md):
 > The dynamics of an Architrino are governed by a simple action: an acceleration caused by the intersection of its path with a potential field.
 >
-> Geodesics and dynamics: The background is fixed (absolute time × Euclidean space); free paths are straight, and any departure comes only from delayed, purely radial intersections with emitted spheres (superposed fields from assemblies)—never from background curvature.
+> Geodesics and dynamics: The background is fixed (absolute time × Euclidean space); free paths are straight. Accelerations come only from delayed, purely radial hits from emitted spheres—never from background curvature.
 
 Detailed explanation (dynamical geometry):
 
@@ -15,23 +15,23 @@ Detailed explanation (dynamical geometry):
   - Each Architrino emits potential on razor-thin spherical shells that expand at field speed $v$ (non-dimensionalized to $v=1$ elsewhere). The field is distribution-valued, supported on $r=v(t-t_0)$ around the historical emission point $\mathbf{s}(t_0)$, with surface density $\propto 1/r^2$.
   - “Potential field” here is not a static scalar on space; it is the collection of expanding spherical wavefronts from all sources at earlier times, summed at the receiver’s location and now.
 
-- Intersection as the event that causes acceleration:
-  - The receiver Architrino follows a continuous path (worldline) $\mathbf{s}_{o'}(t)$. An “intersection” occurs at time $t$ when $\mathbf{s}_{o'}(t)$ lies on one of the source’s expanding shells. Equivalently, there exists an emission time $t'\le t$ such that the geometric condition
+- Intersection as the driver of acceleration:
+  - The receiver’s worldline is $\mathbf{s}_{o'}(t)$. An intersection at time $t$ means some earlier emission time $t' \le t$ satisfies the causal-distance condition
     $
     \|\mathbf{s}_{o'}(t) - \mathbf{s}_o(t')\| = v(t - t')
     $
-    holds. This identifies a causal hit from source $o$’s past to the receiver’s present.
-  - At such an intersection, the model applies a purely radial acceleration impulse directed along the line of action
+    That event is a causal hit from source $o$’s past to the receiver’s present.
+  - At a hit, the acceleration impulse is purely radial along
     $
     \hat{\mathbf{r}} = \frac{\mathbf{s}_{o'}(t) - \mathbf{s}_o(t')}{\|\mathbf{s}_{o'}(t) - \mathbf{s}_o(t')\|}.
     $
-    No right-hand-rule or cross-product terms appear; the action is collinear with $\hat{\mathbf{r}}$.
+    No cross products or right-hand-rule terms appear; the action is collinear with $\hat{\mathbf{r}}$.
 
 - “Simple action” in precise terms:
-  - The dynamical law is event-driven by shell intersections: the receiver’s acceleration is the superposition of per-hit radial contributions, each scaled by a $1/r^2$ law and speed-modulation factors (introduced later). Between hits (in the $\eta\to 0$ idealization), motion is inertial; with mollification ($\eta>0$) the impulses smear into brief, smooth pushes.
-  - The background contributes no force; all deviations from straight-line motion are entirely due to these intersection events with fields emitted by other Architrinos (and, when kinematically allowed, with the receiver’s own past emissions).
+  - The law is event-driven: acceleration is a sum of per-hit radial contributions, each scaled by $1/r^2$ and by speed-modulation factors. Between hits (as $\eta\to 0$) motion is inertial; with mollification ($\eta>0$) the impulses become short, smooth pushes.
+  - The background adds no force; departures from straight motion arise only from these intersections with emitted fields (including self-hits when kinematics allow).
 
 - Physical picture:
-  - Imagine countless expanding spherical “skins of influence.” The Architrino feels a push only when one of those skins reaches it. The push is straight along the radius from the emission point to the receiver’s current location, with strength declining as $1/r^2$ and modulated by source/receiver speeds.
+  - Picture many expanding spherical “skins.” A push occurs only when a skin arrives, directed straight along the radius back to its emission point, with strength falling as $1/r^2$ and dimmed by the source and receiver speeds.
 
-If you’d like to continue, the next item to unpack is “Units and constants” (the $v=1$ convention, coupling $\kappa$, and regularization width $\eta$) and then the formal definition of the causal interaction set $\mathcal{C}_o(t).
+If you’d like to continue, next up are “Units and constants” (the $v=1$ convention, coupling $\kappa$, regularization width $\eta$) and the formal definition of the causal interaction set $\mathcal{C}_o(t)$.
