--- a/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.4 - Personality Architrinos and Fermions.md
+++ b/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.4 - Personality Architrinos and Fermions.md
@@ -22,7 +22,7 @@ The diverse zoo of fermions in the Standard Model emerges from different combina
 
 Leptons are the simplest fermion assemblies.
 
--   **Electron:** An electron is a Noether Core with a single Electrino captured as its personality charge. This orbiting Electrino is what gives the assembly its familiar net charge of $-1\epsilon$. The higher-generation charged leptons (muon and tau) are simply more energetic versions of this same basic structure, where the personality Electrino occupies a higher, less stable energy state.
+-   **Electron:** An electron is a Noether Core with six Electrinos captured as its personality charges. These orbiting Electrinos are what gives the assembly its familiar net charge of $-6\epsilon$ (i.e., $-e$). 
 
 #### **Quarks**
 
