--- a/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.9 - Perspective.md
+++ b/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.9 - Perspective.md
@@ -49,15 +49,15 @@ We work throughout in units with field speed $v=1$; per-hit accelerations are pu
 
 ---
 
-## 4) Superposition with measure-valued shells and ε-regularization
+## 4) Superposition with measure-valued shells and η-regularization
 
 - What we assume:
   - All fields superpose linearly at the level of distributions (shells add).
-  - We use a narrow Gaussian shell $\delta_\varepsilon$ when continuous-time derivatives are needed.
+  - We use a narrow Gaussian shell $\delta_\eta$ when continuous-time derivatives are needed.
 
 - Why it matters:
   - Locality: $1/r^2$ weighting ensures near sources dominate; far sources cancel via multipole suppression.
-  - Bookkeeping: with $\delta_\varepsilon$ you can integrate numerically with standard ODE solvers; with $\delta$ you can reason about impulses and events. Both views agree in the $\varepsilon\to 0$ limit for integrals over resolved intervals.
+  - Bookkeeping: with $\delta_\eta$ you can integrate numerically with standard ODE solvers; with $\delta$ you can reason about impulses and events. Both views agree in the $\eta\to 0$ limit for integrals over resolved intervals.
 
 ---
 
