Update .gitignore and refine Action and Interaction walkthrough for clarity

--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.4 - Action (walkthrough step 1).md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.4 - Action (walkthrough step 1).md
@@ -28,7 +28,7 @@ Detailed explanation (dynamical geometry):
     No cross products or right-hand-rule terms appear; the action is collinear with $\hat{\mathbf{r}}$.
 
 - “Simple action” in precise terms:
-  - The law is event-driven: acceleration is a sum of per-hit radial contributions, each scaled by $1/r^2$ and by speed-modulation factors. Between hits (as $\eta\to 0$) motion is inertial; with mollification ($\eta>0$) the impulses become short, smooth pushes.
+  - The law is event-driven: acceleration is a sum of per-hit radial contributions, each scaled by $1/r^2$ with emission amplitude modulated by the source speed ($q_{\mathrm{eff}}$). Between hits (as $\eta\to 0$) motion is inertial; with mollification ($\eta>0$) the impulses become short, smooth pushes.
   - The background adds no force; departures from straight motion arise only from these intersections with emitted fields (including self-hits when kinematics allow).
 
 - Physical picture:
