--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.4 - Action.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.4 - Action.md
@@ -31,7 +31,7 @@ Action occurs when a point object $o'$ at position $\mathbf{s}_{o'}(t)$ intersec
     $$
     The signed, purely radial contribution is
     $$
-    \mathbf{a}_{o'\leftarrow o}(t; t') = \kappa\,\sigma_{q_o q_{o'}}\,\frac{|q_o q_{o'}|}{r^2}\,\frac{1}{\big(1+|\mathbf{v}_o(t')|\big)\big(1+|\mathbf{v}_{o'}(t)|\big)}\,\hat{\mathbf{r}}.
+    \mathbf{a}_{o'\leftarrow o}(t; t') = \kappa\,\sigma_{q_o q_{o'}}\,\frac{|q_o q_{o'}|}{r^2}\,\frac{1}{\big(1+|\mathbf{v}_o(t')|\big)}\,\hat{\mathbf{r}}.
     $$
     No magnetic/right-hand-rule terms appear; there are no cross products or velocity-direction couplings—only radial action along $\hat{\mathbf{r}}$. The total acceleration superposes over all sources and causal times:
     $$
@@ -64,7 +64,7 @@ $$
 \qquad
 \frac{d}{dt}v_r \;=\; \mathbf{a}_{o'\leftarrow o}(t;t')\cdot \hat{\mathbf{r}}
 \;=\;
-\frac{\kappa\,\sigma_{q_o q_{o'}}\,|q_o q_{o'}|}{r^2\,\big(1+|\mathbf{v}_o(t')|\big)\big(1+|\mathbf{v}_{o'}(t)|\big)}.
+\frac{\kappa\,\sigma_{q_o q_{o'}}\,|q_o q_{o'}|}{r^2\,\big(1+|\mathbf{v}_o(t')|\big)}.
 $$
 Thus the per-hit work rate is $\mathbf{a}\cdot\mathbf{v} = (\mathbf{a}\cdot\hat{\mathbf{r}})\,v_r$; there is no instantaneous work on the orthogonal component.
 
@@ -74,7 +74,7 @@ Radial motion and the $\large 1/r^2$ factor (local trend):
 
 Path-history delay shifts both the causal root $t'$ and $\hat{\mathbf{r}}$ over finite intervals, so these are local statements.
 
-Modeling note: The canonical modulation uses the total speed $|\mathbf{v}_{o'}(t)|$ in the factor $1/\big(1+|\mathbf{v}_{o'}(t)|\big)$. Some applications may consider an alternative receiver modulation depending only on $|v_r|$ to isolate motion along the line of action; we retain the canonical total-speed modulation here for consistency.
+Modeling note: We modulate only the emission amplitude by the source speed via $1/\big(1+|\mathbf{v}_o(t')|\big)$. The receiver’s velocity does not further modulate the force magnitude; it influences the instantaneous power through $\mathbf{a}\cdot\mathbf{v} = |\mathbf{a}|\,v_r$ and the subsequent evolution of $r$.
 
 Plain language: split your velocity into along-the-line and sideways. A hit only changes the along-the-line piece right now; sideways motion continues. If you’re moving inward, the next pushes tend to be stronger (1/r²); outward, weaker.
 
@@ -93,7 +93,7 @@ while preserving total emission $q_{\text{eff}}$. This produces continuous-in-ti
     $$
     The total acceleration on a particle at any instant is the vector sum of the accelerations from all intersecting potential spheres. Operationally, every Architrino is continuously immersed in the superposed sphere streams of all others (and, when kinematics permit, its own); tractability comes from treating each causal hit independently with $1/r^2$ distance weighting (and speed modulations), which makes local sources dominate.
 
--   **Velocity Dependence:** The dynamics are velocity-dependent. Architrinos are transceivers: they emit potential spheres at a constant cadence; only the per-wavefront amplitude is modulated by the emitter’s speed, and the receiver’s response is likewise modulated by its speed. Self-interaction arises when the causal set $\,\mathcal{C}_a(t)\,$ for $o'=o$ is nonempty; this can occur when $|\mathbf{v}_a| \ge v$ at some past time or due to curvature of the path allowing previously emitted shells to re-intersect the worldline.
+-   **Velocity Dependence:** The dynamics are velocity-dependent. Architrinos are transceivers: they emit potential spheres at a constant cadence; only the per-wavefront amplitude is modulated by the emitter’s speed. The receiver’s speed does not change the instantaneous force magnitude; it affects only the work rate via $\mathbf{F}\cdot\mathbf{v} = |\mathbf{F}|\,v_r$. Self-interaction arises when the causal set $\,\mathcal{C}_a(t)\,$ for $o'=o$ is nonempty; this can occur when $|\mathbf{v}_a| \ge v$ at some past time or due to curvature of the path allowing previously emitted shells to re-intersect the worldline.
 
 ### **Self-Interaction**
 
